--- a/1-16-23/1-16-23_Top100.md
+++ b/1-16-23/1-16-23_Top100.md
@@ -1,4 +1,4 @@
-## Fangraphs "THE BOARD"
+### Fangraphs "THE BOARD"
 ### 2022 Updated, 2022 Stats
 
 | Rank | Name                    | Org | Pos  | Current Level |
